Update GPULlama3.java version to 0.3.1